parser/parser.ts

// Generated by peggy v. 1.2.0 (ts-pegjs plugin v. 1.2.1 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
  source: string;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

function peg$padEnd(str: string, targetLength: number, padString: string) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, SyntaxError.prototype);
    } else {
      (this as any).__proto__ = SyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }

  format(sources: { source: string; text: string }[]): string {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src: string[] | null = null;
      let k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      let s = this.location.start;
      let loc = this.location.source + ':' + s.line + ':' + s.column;
      if (src) {
        let e = this.location.end;
        let filler = peg$padEnd('', s.line.toString().length, ' ');
        let line = src[s.line - 1];
        let last = s.line === e.line ? e.column : line.length + 1;
        str += '\n --> ' + loc + '\n' + filler + ' |\n' + s.line + ' | ' + line + '\n' + filler + ' | ' +
          peg$padEnd('', s.column - 1, ' ') +
          peg$padEnd('', last - s.column, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions: {[id: string]: any} = { start: peg$parsestart };
  let peg$startRuleFunction: () => any = peg$parsestart;

  const peg$c0 = function(l: any): any {
    return l.filter((t: any) => t?.type !== 'whitespace')
  };
  const peg$c1 = "//";
  const peg$c2 = peg$literalExpectation("//", false);
  const peg$c3 = /^[^\r\n]/;
  const peg$c4 = peg$classExpectation(["\r", "\n"], true, false);
  const peg$c5 = function(c: any): any {
    return {
      type: "comment",
      payload: { comment: "//" + c.join('') },
      location: location()
    }
  };
  const peg$c6 = /^[ \r\n\t]/;
  const peg$c7 = peg$classExpectation([" ", "\r", "\n", "\t"], false, false);
  const peg$c8 = function(): any { return { type: "whitespace" } };
  const peg$c9 = "export";
  const peg$c10 = peg$literalExpectation("export", false);
  const peg$c11 = "type";
  const peg$c12 = peg$literalExpectation("type", false);
  const peg$c13 = "=";
  const peg$c14 = peg$literalExpectation("=", false);
  const peg$c15 = ";";
  const peg$c16 = peg$literalExpectation(";", false);
  const peg$c17 = function(e: any, identifier: any, type: any): any {
    return {
      type: "typedef",
      payload: {
        modifiers: e ? [e] : [],
        identifier,
        type
      },
      location: location()
    }
  };
  const peg$c18 = /^[a-zA-Z_]/;
  const peg$c19 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  const peg$c20 = /^[a-zA-Z0-9_]/;
  const peg$c21 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  const peg$c22 = function(i: any): any {
    return {
      type: "identifier",
      payload: {
        name: i[0] + i[1].join('')
      },
      location: location()
    }
  };
  const peg$c23 = "[";
  const peg$c24 = peg$literalExpectation("[", false);
  const peg$c25 = "]";
  const peg$c26 = peg$literalExpectation("]", false);
  const peg$c27 = ",";
  const peg$c28 = peg$literalExpectation(",", false);
  const peg$c29 = function(underlying: any, array: any): any {
    if (array.length === 0) return underlying;
    return array.reduce((carry: any, current: any) => {
      if (current.length === 7) {
        if (current[3] === null)
          return {
            type: 'array_type',
            payload: {
              type: carry,
              min: null,
              max: null
            },
            location: location()
          }
        return {
          type: 'array_type',
          payload: {
            type: carry,
            min: current[3],
            max: current[3]
          },
          location: location()
        }
      }
      if (current.length === 11) {
       return {
         type: 'array_type',
         payload: {
           type: carry,
           min: current[3],
           max: current[7]
         },
         location: location()
       }
      }
      return {
        type: 'error',
        location: location()
      }
    }, underlying);
  };
  const peg$c30 = "0";
  const peg$c31 = peg$literalExpectation("0", false);
  const peg$c32 = /^[1-9]/;
  const peg$c33 = peg$classExpectation([["1", "9"]], false, false);
  const peg$c34 = /^[0-9]/;
  const peg$c35 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c36 = function(u: any): any {
    return {
      type: "unsigned_integer",
      value: u === "0" ? "0" : u[0] + u[1].join(''),
      location: location()
    }
  };
  const peg$c37 = /^[+\-]/;
  const peg$c38 = peg$classExpectation(["+", "-"], false, false);
  const peg$c39 = function(u: any): any {
    return {
      type: "signed_integer",
      value: (u[0] === '-' ? '-' : '') + (u[1] === "0" ? 0 : u[1][0] + u[1][1].join('')),
      location: location()
    }
  };
  const peg$c40 = /^[.]/;
  const peg$c41 = peg$classExpectation(["."], false, false);
  const peg$c42 = /^[eE]/;
  const peg$c43 = peg$classExpectation(["e", "E"], false, false);
  const peg$c44 = function(g: any): any {
    return {
      type: "float",
      value:
          (g[0] ?? '')
        + (g[1][0] === null ? "" : typeof (g[1][0]) === "string" ? g[1][0] : g[1][0].join(''))
        + (g[1][1] === null ? "" : typeof (g[1][1]) === "string" ? g[1][1] : Array.isArray(g[1][1][1]) ? (g[1][1][0] + g[1][1][1].join('')) : g[1][1].join(''))
        + (g[1][2] === null ? "" : 'e' + (g[1][2][1] ?? '') + g[1][2][2].join('')),
      location: location()
    }
  };
  const peg$c45 = "true";
  const peg$c46 = peg$literalExpectation("true", false);
  const peg$c47 = "false";
  const peg$c48 = peg$literalExpectation("false", false);
  const peg$c49 = function(f: any): any {
    return {
      type: "boolean",
      value: f === "true",
      location: location()
    }
  };
  const peg$c50 = "\"";
  const peg$c51 = peg$literalExpectation("\"", false);
  const peg$c52 = /^[^\\"]/;
  const peg$c53 = peg$classExpectation(["\\", "\""], true, false);
  const peg$c54 = "\\";
  const peg$c55 = peg$literalExpectation("\\", false);
  const peg$c56 = peg$anyExpectation();
  const peg$c57 = "'";
  const peg$c58 = peg$literalExpectation("'", false);
  const peg$c59 = /^[^\\']/;
  const peg$c60 = peg$classExpectation(["\\", "'"], true, false);
  const peg$c61 = function(t: any): any {
    return {
      type: "string",
      value: t[1].map((x: any) => Array.isArray(x) ? x.join('') : x).join(''),
      location: location()
    }
  };
  const peg$c62 = "string";
  const peg$c63 = peg$literalExpectation("string", false);
  const peg$c64 = "(";
  const peg$c65 = peg$literalExpectation("(", false);
  const peg$c66 = "{";
  const peg$c67 = peg$literalExpectation("{", false);
  const peg$c68 = "}";
  const peg$c69 = peg$literalExpectation("}", false);
  const peg$c70 = ")";
  const peg$c71 = peg$literalExpectation(")", false);
  const peg$c72 = function(min: any, max: any): any { return { type: "string_type", payload: { min, max }, location: location() } };
  const peg$c73 = function(max: any): any { return { type: "string_type", payload: { min: null, max }, location: location() } };
  const peg$c74 = function(min: any): any { return { type: "string_type", payload: { min, max: null }, location: location() } };
  const peg$c75 = function(len: any): any { return { type: "string_type", payload: { min: len, max: len }, location: location() } };
  const peg$c76 = function(): any { return { type: "string_type", payload: { min: null, max: null }, location: location() } };
  const peg$c77 = "DateString";
  const peg$c78 = peg$literalExpectation("DateString", false);
  const peg$c79 = function(): any { return { type: "date_string_type", payload: null, location: location() } };
  const peg$c80 = "integer";
  const peg$c81 = peg$literalExpectation("integer", false);
  const peg$c82 = function(min: any, max: any): any { return { type: "integer_type", payload: { min, max }, location: location() } };
  const peg$c83 = function(max: any): any { return { type: "integer_type", payload: { min: null, max }, location: location() } };
  const peg$c84 = function(min: any): any { return { type: "integer_type", payload: { min, max: null }, location: location() } };
  const peg$c85 = function(): any { return { type: "integer_type", payload: { min: null, max: null }, location: location() } };
  const peg$c86 = "[?";
  const peg$c87 = peg$literalExpectation("[?", false);
  const peg$c88 = function(t: any, f: any): any { return f ? [f, t === "[?" ? "open" : "closed"] : null };
  const peg$c89 = "?]";
  const peg$c90 = peg$literalExpectation("?]", false);
  const peg$c91 = function(f: any, t: any): any { return f ? [f, t === "?]" ? "open" : "closed"] : null };
  const peg$c92 = "float";
  const peg$c93 = peg$literalExpectation("float", false);
  const peg$c94 = function(left: any, right: any): any { return { type: "float_type", payload: { left, right }, location: location() } };
  const peg$c95 = function(): any { return { type: "float_type", payload: { left: null, right: null }, location: location() } };
  const peg$c96 = "boolean";
  const peg$c97 = peg$literalExpectation("boolean", false);
  const peg$c98 = function(): any { return { type: "boolean_type", payload: null, location: location() } };
  const peg$c99 = "null";
  const peg$c100 = peg$literalExpectation("null", false);
  const peg$c101 = function(): any { return { type: "null_type", payload: null, location: location() } };
  const peg$c102 = function(sint: any): any { return { type: 'integer_literal_type', payload: { value: sint }, location: location() } };
  const peg$c103 = function(float: any): any { return { type: 'float_literal_type', payload: { value: float }, location: location() } };
  const peg$c104 = function(boolean: any): any { return { type: 'boolean_literal_type', payload: { value: boolean }, location: location() } };
  const peg$c105 = function(string: any): any { return { type: 'string_literal_type', payload: { value: string }, location: location() } };
  const peg$c106 = "?";
  const peg$c107 = peg$literalExpectation("?", false);
  const peg$c108 = ":";
  const peg$c109 = peg$literalExpectation(":", false);
  const peg$c110 = function(f: any): any {
    return {
      type: 'dictionary_type',
      payload: {
        properties: f.map((p: any) => ({
          identifier: p[1],
          optional: p[3] === "?",
          type: p[7]
        }))
      },
      location: location()
    }
  };
  const peg$c111 = function(tn: any, opt: any, tt: any, tr: any): any {
    return {
      type: "named_tuple_type",
      payload: {
        elements: [
          {
            identifier: tn,
            optional: opt === "?",
            type: tt
          },
          ...tr.map((x: any) => ({
            identifier: x[2],
            optional: x[4] === "?",
            type: x[8]
          }))
        ]
      },
      location: location()
    }
  };
  const peg$c112 = function(t1: any, tr: any): any {
    return {
      type: "tuple_type",
      payload: {
        elements: [t1, ...tr.map((x: any) => x[2])]
      },
      location: location()
    }
  };
  const peg$c113 = "&";
  const peg$c114 = peg$literalExpectation("&", false);
  const peg$c115 = function(t1: any, tr: any): any {
    return tr.length === 0 ? t1 : {
      type: 'union_type',
      payload: {
        types: [t1, ...tr.map((tn: any) => tn[3])]
      },
      location: location()
    }
  };
  const peg$c116 = "|";
  const peg$c117 = peg$literalExpectation("|", false);
  const peg$c118 = function(t1: any, tr: any): any {
   return tr.length === 0 ? t1 : {
     type: 'intersection_type',
     payload: {
       types: [t1, ...tr.map((tn: any) => tn[3])]
     },
     location: location()
   }
  };
  const peg$c119 = function(type: any): any {
    return {
      ...type,
      location: location()
    }
  };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestart(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsetypedef();
    if (s2 as any === peg$FAILED) {
      s2 = peg$parse__();
    }
    while (s2 as any !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsetypedef();
      if (s2 as any === peg$FAILED) {
        s2 = peg$parse__();
      }
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsecomment(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      if (peg$c3.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
      }
      if (s2 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c6.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s2 as any === peg$FAILED) {
      s2 = peg$parsecomment();
    }
    while (s2 as any !== peg$FAILED) {
      s1.push(s2);
      if (peg$c6.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s2 as any === peg$FAILED) {
        s2 = peg$parsecomment();
      }
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c8();
    }
    s0 = s1;

    return s0;
  }

  function peg$parse__(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c6.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s2 as any === peg$FAILED) {
      s2 = peg$parsecomment();
    }
    if (s2 as any !== peg$FAILED) {
      while (s2 as any !== peg$FAILED) {
        s1.push(s2);
        if (peg$c6.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s2 as any === peg$FAILED) {
          s2 = peg$parsecomment();
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c8();
    }
    s0 = s1;

    return s0;
  }

  function peg$parsetypedef(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
